Add Supervisor node

--- a/Dev/ArchBuddyDev.ipynb
+++ b/Dev/ArchBuddyDev.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "bad630b2",
+   "metadata": {},
+   "source": [
+    "## Development/Test notebook "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "50fc42c2",
@@ -12,8 +20,34 @@
    "outputs": [],
    "source": [
     "from dotenv import load_dotenv\n",
-    "from "
+    "from core.execution import execute_tool_calls"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e58e9fc",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "print(\"Hello World\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88227590",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
